--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<div>
+		<label for="fn">First Name:</label>
+		<input id="fn" type="text"/>
+		</div>
+		<div>
+		<label for="ln">Last Name:</label>
+		<input id="ln" type="text"/>
+		</div>
+		<div>
+		<label for="pn">Phone Number:</label>
+		<input id="pn" type="tel"/>
+		</div>
+		<div>
+		<label for="email">Email Id:</label>
+		<input id="email" type="email"/>
+		</div>
+		<button type="submit" onclick="alert()">Submit</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
