--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		<label for="email">Email Id:</label>
 		<input id="email" type="email"/>
 		</div>
-		<button type="submit" onclick="alert()">Submit</button>
+		<button type="submit" onclick="myAlert()">Submit</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
