--- a/main.html
+++ b/main.html
@@ -11,19 +11,19 @@
 	<form>
 		<div>
 		<label for="fn">First Name:</label>
-		<input id="fn" type="text"/>
+		<input id="fn" type="text" name="First Name"/>
 		</div>
 		<div>
 		<label for="ln">Last Name:</label>
-		<input id="ln" type="text"/>
+		<input id="ln" type="text" name="Last Name"/>
 		</div>
 		<div>
 		<label for="pn">Phone Number:</label>
-		<input id="pn" type="tel"/>
+		<input id="pn" type="tel" name="Phone Number"/>
 		</div>
 		<div>
 		<label for="email">Email Id:</label>
-		<input id="email" type="email"/>
+		<input id="email" type="email" name="Email Id"/>
 		</div>
 		<button type="submit" onclick="myAlert()">Submit</button>
 		
